Starting Maldives, fixed center align feature rows

--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -259,6 +259,7 @@
 @media screen and (min-width: 667px) {
   .feature__wrapper {
     display: flex; /* Mobile First ~mlc */
+    column-gap: 2%;
   }
 }
 
